Checkstyle, and findbugs fixes.