@@ -314,7 +314,7 @@ public class HTTPControllerServerTester extends TestCase {
         assertEquals("Should have received one job id",
                      1, c.changeIndexJobListArgument.size());
         assertEquals("Should have received job id '1'",
-                     new Long(1L), c.changeIndexJobListArgument.toArray()[0]);
+                Long.valueOf(1L), c.changeIndexJobListArgument.toArray()[0]);
         assertEquals("Should have received label", "myTestLabel",
                      c.changeIndexLabelParameter);
 
@@ -344,8 +344,8 @@ public class HTTPControllerServerTester extends TestCase {
  
         // Check, that the set of expected Job ids is {1L,8L}
         Set<Long> setOfExpectedJobIds = new HashSet<Long>();
-        setOfExpectedJobIds.add(new Long(1L));
-        setOfExpectedJobIds.add(new Long(8L));
+        setOfExpectedJobIds.add(Long.valueOf(1L));
+        setOfExpectedJobIds.add(Long.valueOf(8L));
         assertTrue("Should have received job ids '1' and '8'",
                 setOfExpectedJobIds.containsAll(c.changeIndexJobListArgument));
 
